fix: replace .toList() with .collect(Collectors.toList()) for Java 11 compatibility